<resources>
    <string name="app_name">YourClassApp</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="conectar">CONECTAR</string>
    <string name="recordar_pass">Recordar contraseña</string>
    <string name="registro">REGISTRO</string>
    <string name="recuperar">RECUPERAR</string>
    <string name="introduzca_su_correo">Introduzca su correo</string>
    <string name="recuperar_pass">Recuperar contraseña</string>
    <string name="google">GOOGLE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="desconectar">Desconectar</string>
    <string name="mis_clases">Mis Clases</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mis_alumnos">Mis Alumnos</string>
    <string name="title_activity_alumno_tab">AlumnoTabActivity</string>
    <string name="tab_text_1">HOME</string>
    <string name="tab_text_2">RANKING</string>
    <string name="tab_text_3">RECOMPENSAS</string>
    <string name="ranking_alumnos">Ranking Alumnos</string>
    <string name="ranking">Ranking</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="todo">TODO</string>
    <string name="volver">VOLVER</string>
    <string name="loadsplashimg">loadsplashimg</string>
    <string name="ayuda">Ayuda</string>
    <string name="rewards">Rewards</string>
    <string name="recompensas">Recompensas</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="a_adir_alumno">AÑADIR ALUMNO</string>
    <string name="nombre">Nombre</string>
    <string name="curso_primero_segundo">Curso (Primero, Segundo...)</string>
    <string name="nombre2">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="puntos">Puntos:</string>
    <string name="c_digo">CÓDIGO:</string>
    <string name="volver_a_login">volver a login</string>
    <string name="c_digof">Código</string>
    <string name="login">Login</string>
    <string name="introduzca_su_c_digo_de_alumno">Introduzca su código de alumno</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="a_adir_clase">AÑADIR CLASE</string>
    <string name="puntos1">puntos</string>
    <string name="apellidos1">Apellidos</string>
    <string name="apellido2">Apellido2</string>
    <string name="textview">TextView</string>


</resources>