<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icono"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_misclases"
            android:icon="@drawable/education_computer_school_graduate"
            android:title="@string/mis_clases" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/iconrank"
            android:title="@string/ranking" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/education_book_learn_learning_icon_149694"
            android:title="@string/ayuda"/>
        <item
            android:title="">
        <menu>
            <item
                android:id="@+id/logOutMenu"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/desconectar" />
        </menu>
        </item>
    </group>
</menu>