<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:backgroundTint="#E8EDE2"
    android:paddingTop="5dp"
    app:cardCornerRadius="0dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_Alumno"
            android:layout_width="108dp"
            android:layout_height="93dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_nombreA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nombre"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_apellidosA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_apellidosA2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido2"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/puntos"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_points"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/puntos1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bt_addPoints"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/arrow_up_float"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/bt_removePoints"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/arrow_down_float"
                android:contentDescription="@string/todo" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>