<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#D8F1BB"
    tools:context=".AddAlumnoActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/loadsplashimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono2" />

    <EditText
        android:id="@+id/edt_NombreAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_PrimerApellidoAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/primer_apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_NombreAlumno"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_SegundoApellidoAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/segundo_apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_PrimerApellidoAlumno"
        android:autofillHints="" />

    <Button
        android:id="@+id/bt_AddAlumno2"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:text="@string/a_adir_alumno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_SegundoApellidoAlumno" />

    <Button
        android:id="@+id/bt_volver"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="@+id/bt_AddAlumno2"
        app:layout_constraintStart_toStartOf="@+id/bt_AddAlumno2"
        app:layout_constraintTop_toBottomOf="@+id/bt_AddAlumno2" />

    <TextView
        android:id="@+id/textErrorA"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_volver"
        app:layout_constraintVertical_bias="0.043" />
</androidx.constraintlayout.widget.ConstraintLayout>