<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/fondo"
    tools:context=".LoginAlumnosActivity">

    <EditText
        android:id="@+id/edt_codigoAlumno"
        android:layout_width="229dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/c_digof"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="148dp"
        android:gravity="center_horizontal"
        android:text="@string/introduzca_su_c_digo_de_alumno"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/bt_loginAlumno"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/edt_codigoAlumno"
        app:layout_constraintTop_toBottomOf="@+id/edt_codigoAlumno" />

    <Button
        android:id="@+id/bt_backMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="@+id/edt_codigoAlumno"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bt_loginAlumno"
        app:layout_constraintTop_toTopOf="@+id/bt_loginAlumno" />

    <TextView
        android:id="@+id/txt_ErrorLoginA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/error"
        app:layout_constraintEnd_toEndOf="@+id/bt_backMain"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/bt_loginAlumno"
        app:layout_constraintTop_toBottomOf="@+id/bt_loginAlumno" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono2"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>