<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/fondo"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/regUser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.15"
        android:autofillHints="" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo_electr_nico"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/regUser"
        app:layout_constraintStart_toStartOf="@+id/regUser"
        app:layout_constraintTop_toBottomOf="@+id/regUser"
        android:autofillHints="" />

    <EditText
        android:id="@+id/regPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/regEmail"
        app:layout_constraintStart_toStartOf="@+id/regEmail"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/regPassConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirmar_contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/regPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/regPass"
        app:layout_constraintTop_toBottomOf="@+id/regPass"
        android:autofillHints="" />

    <Button
        android:id="@+id/regSignup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="signUp"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/regPassConfirm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/regPassConfirm"
        app:layout_constraintTop_toBottomOf="@+id/regPassConfirm"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/regSignup"
        app:layout_constraintEnd_toEndOf="@+id/regSignup"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/regSignup" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color1"
        android:onClick="backToLogin"
        app:layout_constraintEnd_toEndOf="@+id/regSignup"
        app:layout_constraintStart_toStartOf="@+id/regSignup"
        app:layout_constraintTop_toBottomOf="@+id/regSignup"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono2"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>